Added opencl skeleton
Not working as of yet, just a checkpoint

--- a/NBody.vcxproj
+++ b/NBody.vcxproj
@@ -89,6 +89,9 @@
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="Physics.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="nbody.cl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
