Added OCL files to handle OpenCL functions
Housecleaning

--- a/NBody.vcxproj
+++ b/NBody.vcxproj
@@ -82,11 +82,13 @@
     <ClCompile Include="Body.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="OCL.cpp" />
     <ClCompile Include="Physics.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Body.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="OCL.h" />
     <ClInclude Include="Physics.h" />
   </ItemGroup>
   <ItemGroup>
